--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -1,5 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://hua.vcfkoo.ga/hua/7" rel="nofollow">大纪元</a> | <a href="https://hua.vcfkoo.ga/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://hua.vcfkoo.ga/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://hua.vcfkoo.ga/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://hua.vcfkoo.ga/hua/11" rel="nofollow">看中国</a> | <a href="https://hua.vcfkoo.ga/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://hua.vcfkoo.ga/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://hua.vcfkoo.ga/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766765.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2020/01/15e6905677394b9b_ttl7dayXor_tn0103-xxx-320x200.jpg">【拍案惊奇】武汉肺炎例增 SARS阴影港台预防</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766999.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-454237724-1-700x420-600x400-320x200.jpg">中共警察强制中小学男生抽血 建DNA数据库</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/5/n11701493.md#1">【思想领袖】中共内部承认正走向解体（一）</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/29/n11753643.md#1">汤唯面对镜头洒泪 揭开女星不为人知的尴尬</a><br>
@@ -9,9 +9,11 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/28/n11751864.md#1">内蒙古公安警官枪杀两副局长 当局封口</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/28/n11751676.md#1">曹兴诚批九二共识胡说八道 专家赞他有勇气</a><br>
 <br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767063.md#1">袁斌：2019年以悲剧落幕，2020年以惨剧揭幕</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764911.md#1">【名家专栏】浅析十年来美国主要经济论点</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766848.md#1">唐风：温哥华中学生课堂讲香港被踢下体之思考</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766583.md#1">为何中国滑雪队的要求遭挪威图书馆强烈拒绝</a><br>
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766398.md#1">杨宁：公安内部现惨案 官员自相残杀难休止</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766427.md#1">张林：共军在朝鲜战争中丧生两百万（2）</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766288.md#1">王友群：如何看中美将签署第一阶段贸易协议</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766346.md#1">颜丹：是谁造出了“善小而不为”的中国人？</a><br>
@@ -20,8 +22,6 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765134.md#1">【名家专栏】改善地球环境 无需社会主义政策</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764938.md#1">新州：从违反程序看中共破坏司法公正</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764613.md#1">袁斌：“小康年”将到，访民为何吊死在信访局</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11754433.md#1">俞晓薇：明慧新年祝福值得中国和世界深思</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11764288.md#1">东方觉：犯罪集团之恶与“保护伞”之黑</a><br>
 <br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11739570.md#1">【2019盘点】时代变革 川普的九记重锤</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11743871.md#1">【独家】原大陆医生：我为何远离器官移植</a><br>
@@ -30,8 +30,9 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11725027.md#1">【内幕】中共如何将全球港口和商船变武器</a><br>
 <br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766999.md#1">中共警察强制中小学男生抽血 建DNA数据库</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766694.md#1">【翻墙必看】中共公安官员自相残杀的背后</a><br>
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767045.md#1">陕西前书记赵正永被审查 通报措辞极严厉</a><br>
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766694.md#1">【翻墙必看】中共官员自相残杀的背后</a><br>
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766765.md#1">【拍案惊奇】武汉肺炎例增 SARS阴影港台预防</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766872.md#1">武汉肺炎疫情还未了 大陆多地又爆发流感</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766821.md#1">美伊冲突 专家：北京陷内困无瑕顾及伊朗</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11755421.md#1">2020年中国十个科技品牌在海外恐碰壁</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766515.md#1">传武汉已掌握新病毒 港府急应变拟升级防疫</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766426.md#1">习近平与林郑新年致辞有难言之隐？专家解读</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766425.md#1">山西退伍军人死于非命 遗体吊在信访局门外</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766398.md#1">杨宁：公安内部现惨案 官员自相残杀难休止</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766814.md#1">楼市趋冷 北京760万元二手房两月降170万</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766842.md#1">新年伊始茅台连跌两日 市值蒸发1300亿</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766574.md#1">除掉伊朗二号人物 川普：为了止战非宣战</a><br>
