--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -35,7 +35,9 @@
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761589.md#1" target="_blank">生活小秘诀 苹果手机空格键还可这么用</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761589.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-158836001-150x120.jpg" align ="left"></a>只要按住苹果手机空格键（space bar），就可以将光标精确地移到想要去的位置。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 10:14 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761626.md#1" target="_blank">家里装修期间如何“战地求生”？</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761626.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/wall-416060_1280-150x120.jpg" align ="left"></a>家里装修浴室和厨房期间对谁来说都是很头疼的时期，有的人考虑搬出去住，但是这工作量大开支也大。如果实在要住在家里，看看地产资讯网Domain搜集的几点经验，帮您顺利度过这种“兵荒马乱”的日子。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 10:04 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761601.md#1" target="_blank">浴室装修专家给您七大提点</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761601.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/home-3593729_1280-150x120.jpg" align ="left"></a>翻新浴室的时候，看着各式各样的新潮花样是不是会挑花了眼，到底哪些是必须的，哪些是奢侈不必要的呢？房地产资讯网Domain收集了多位专家的意见，为读者提供了七个建议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 9:51 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761588.md#1" target="_blank">家居格局规划应避免的五大错误</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761588.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/living-room-1085987_1280-150x120.jpg" align ="left"></a>设计新家的时候，如何最有效地规划空间的分割？地产资讯网Domain列出了人们常犯的五个错误。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 9:39 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767534.md#1" target="_blank">汽车维修问与答：引擎漏油的原因</a><br></h3>汽车维修问与答
+
+读者James问：李师傅您好！我有一辆98年的本田雅阁两门跑车，已有20多年历史，但行驶平稳，从未有大毛病，不舍得放弃。近几个月发现引擎油缓慢漏出，外壳被油包裹，两次送去普通车行清洗引擎外壳后，都未发现任何问题。到本田经销商检查后说，可能需更换Oil Pump Seal和Distributor，需.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 4:14 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11762251.md#1" target="_blank">民调：2019卑首次购房者多依赖父母</a><br></h3>本周一公布的这项调查显示，现在的首次购房者比以往任何时候都更有可能向父母要求首付现金，虽然只有8％的首次购房者从父母那里获得了一半以上的首付，而2015年这一比例为19％。
 报告指出：“尽管有更多的首次购房者获得了经济上的帮助，但他们似乎在过去四年中所获得的首付比例较低。”59％的公证人说，他们的客户通常可（从父母那.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 7:48 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/news2008.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news2008_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news2008_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news2008_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news2008_2.md#1">下一页</a></h3></td></tr>
