--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/28/n11751864.md#1">内蒙古公安警官枪杀两副局长 当局封口</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/28/n11751676.md#1">曹兴诚批九二共识胡说八道 专家赞他有勇气</a><br>
 <br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767385.md#1">【名家专栏】主流媒体的新年决心：停止撒谎</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764911.md#1">【名家专栏】浅析十年来美国主要经济论点</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766848.md#1">唐风：温哥华中学生课堂讲香港被踢下体之思考</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766583.md#1">为何中国滑雪队的要求遭挪威图书馆强烈拒绝</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765134.md#1">【名家专栏】改善地球环境 无需社会主义政策</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764938.md#1">新州：从违反程序看中共破坏司法公正</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764613.md#1">袁斌：“小康年”将到，访民为何吊死在信访局</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11754433.md#1">俞晓薇：明慧新年祝福值得中国和世界深思</a><br>
 <br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11739570.md#1">【2019盘点】时代变革 川普的九记重锤</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11743871.md#1">【独家】原大陆医生：我为何远离器官移植</a><br>
@@ -30,6 +30,7 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11725027.md#1">【内幕】中共如何将全球港口和商船变武器</a><br>
 <br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767423.md#1">大批明星搭机资料遭国航员工泄露</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11760693.md#1">蒋经国一生反共信念的历程</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767304.md#1">赵正永的大管家 陕西前副省长陈国强被双开</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767045.md#1">陕西前书记赵正永被审查 通报措辞极严厉</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766872.md#1">武汉肺炎疫情扩大 大陆多地又爆发流感</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766821.md#1">美伊冲突 专家：北京陷内困无瑕顾及伊朗</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11755421.md#1">2020年中国十个科技品牌在海外恐碰壁</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766705.md#1">伊朗将领被炸死 美前官员事前精准“预言”</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766814.md#1">楼市趋冷 北京760万元二手房两月降170万</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766842.md#1">新年伊始茅台连跌两日 市值蒸发1300亿</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765922.md#1">王赫：中国经济乱象纷呈 中共束手无策</a><br>
